# warehouse-rs

./: Cargo.toml  Rocket.toml
migrations/2020-12-29-202438_create_product_category/: down.sql  up.sql
migrations/2020-12-29-203109_create_product/: up.sql
migrations/2020-12-29-203350_create_product_category_classification/: down.sql  up.sql
migrations/2020-12-29-204832_create_product_category_rollup/: down.sql  up.sql
migrations/2020-12-29-212112_create_inventory_item/: down.sql  up.sql
migrations/2020-12-29-212428_create_warehouse/: down.sql  up.sql
src/: entities.rs  lib.rs  schema.rs  test_utils.rs
src/controllers/: mod.rs  product_category.rs
src/product_category/: controllers.rs  entities.rs  mod.rs
src/utilities/: mod.rs
