[package]
name = "warehouse-rs"
version = "0.1.0"
authors = ["Vanio Begic <vanio.begic123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"